14632: Mekko: Update margin of the visual in order to avoid axis-labels overlapping

--- a/style/visual.less
+++ b/style/visual.less
@@ -57,4 +57,8 @@
     .svgScrollable {
         overflow: hidden;
     }
+
+    .domain {
+        fill: transparent;
+    }
 }
